# RayQuiro

./: .gitignore  ARCHITECTURE_0_0_2.md  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  install.ps1  install.sh  make-release.ps1  modules.json
assets/vulkan/: preview.frag  preview.vert
examples/: backend_runtime_tour.rq  language_tour.rq  main.rq  postgres_demo.rq  rayquiro_installer.rq  telebot_demo.rq  vulkan_backend_demo.rq  web_backend_demo.rq
include/rayquiro/: AST.h  BundledRaylib.h  Bytecode.h  BytecodeCompiler.h  BytecodePackage.h  CliServices.h  Compiler.h  EngineBackend.h  EngineDLLAPI.h  Formatter.h  Framework.h  Generator.h  Interpreter.h  Lexer.h  ModernUI.h  NativeModuleABI.h  Parser.h  RaylibRenderBackend.h  RqioCoreAPI.h  RuntimeEmitter.h  Token.h  UserPaths.h  VM.h  VulkanRenderBackend.h  rte_api.h
include/rayquiro/modules/: BundledRaylib.h  EngineBackend.h  EngineDLLAPI.h  Framework.h  ModernUI.h  RaylibRenderBackend.h  VulkanRenderBackend.h
native_modules/: app_module.cpp  engine_module.cpp  ui_module.cpp  web_module.cpp
src/: main.cpp  resources.rc  rqio_core.cpp
toolchain/: README.md  setup-toolchain.ps1
